--- a/src/components/ChatPage/ChatMessages/ChatMessages.css
+++ b/src/components/ChatPage/ChatMessages/ChatMessages.css
@@ -2,9 +2,7 @@
     flex: 1;
     min-height: 100px;
     overflow: auto;
-    border: 1px solid black;
-    border-color: #9a9a9a;
-    border-radius: 7px 7px 0 0;
+    max-height: calc(100vh - 150px);
 }
 
 .messages-list {
