--- a/src/components/ChatPage/ChatMessages/Message/Message.css
+++ b/src/components/ChatPage/ChatMessages/Message/Message.css
@@ -1,10 +1,47 @@
 .message-item {
-    width: 55%;
-    margin: 8px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 24px;
     padding: 12px 8px;
     word-break: break-word;
     border-radius: 4px;
-    color: white;
-    background-color: #3f4042;
+    color: black;
     margin-right: auto;
+}
+
+.message-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.avatar {
+    margin-right: 24px;
+}
+
+.message-title {
+    display: flex;
+    /* justify-content: center; */
+}
+
+.username {
+    font-weight: bold;
+    margin-right: 15px;
+}
+
+.time {
+    font-size: 10px;
+    color: gray;
+}
+
+.text-message {
+    text-decoration: none;
+    outline: none;
+    border: none;
+    resize: none;
+    line-height: 1.2;
+}
+
+.text-message:focus {
+    outline: none;
 }
