--- a/src/components/JoinChatPage/JoinChatPage.css
+++ b/src/components/JoinChatPage/JoinChatPage.css
@@ -1,35 +1,57 @@
 .join-chat-container {
-    position: fixed;
-    left: 10%;
-    right: 10%;
+    position: absolute;
+    left: 50%;
     top: 50%;
-    transform: translate(0, -50%);
-    display: flex;
-    flex-direction: column;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    border: 1px solid #e6e6e6;
+    border-radius: 10px;
+    padding: 40px;
+}
+
+.title {
+    font-size: 32px;
+    padding: 0;
+    margin: 0 0 40px;
+    font-weight: normal;
+}
+
+.username-legend {
+    font-weight: bold;
+    font-size: 14px;
+    margin-top: 40px;
 }
 
 .text-input-field {
-    padding: 24px 12px;
-    border-radius: 7px;
-    font-size: 24px;
+    padding: 15px;
+    border-radius: 10px;
+    border: solid 1px #e6e6e6;
+    font-size: 14px;
+    color: black;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 40px;
+    margin-top: 4px;
 }
 
 .text-input-field:focus {
     outline: none;
 }
 
-.button-next {
-    font-size: 28px;
-}
-
 .next-enter-room-button {
-    margin-top: 20px;
-    padding: 24px 12px;
-    font-size: 28px;
-    /* background: #31a24c; */
+    height: 40px;
+    padding: 0 15px;
+    line-height: 40px;
+    font: 14px;
+    font-weight: bold;
     color: white;
-    font-weight: 600;
-    text-align: center;
+    background: orange;
     text-decoration: none;
     border-radius: 7px;
+    float: right;
+}
+
+.next-enter-room-button--disabled {
+    background: #e6e6e6;
+    color: black
 }
