--- a/src/components/JoinChatPage/JoinChatPage.css
+++ b/src/components/JoinChatPage/JoinChatPage.css
@@ -45,7 +45,7 @@
     font: 14px;
     font-weight: bold;
     color: white;
-    background: orange;
+    background: #ff8203;
     text-decoration: none;
     border-radius: 7px;
     float: right;
